pkg/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
	<description>DocuSign Log</description>
	<label>DocuSign Log</label>
	<nameField>
		<displayFormat>DSL-{0000000}</displayFormat>
		<label>DocuSign Log</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>DocuSign Logs</pluralLabel>
	<sharingModel>Read</sharingModel>
</CustomObject>