pkg/main/default/objects/Log__c/fields/Class__c.field-meta.xml
<CustomField>
	<externalId>true</externalId>
	<fullName>Class__c</fullName>
	<label>Class</label>
	<length>100</length>
	<type>Text</type>
</CustomField>