pkg/main/default/objects/Log__c/fields/EntityId__c.field-meta.xml
<CustomField>
	<externalId>true</externalId>
	<fullName>EntityId__c</fullName>
	<label>DocuSign entity ID</label>
	<length>36</length>
	<type>Text</type>
</CustomField>