pkg/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
	<fullName>Message__c</fullName>
	<label>Message</label>
	<length>131072</length>
	<type>LongTextArea</type>
</CustomField>