pkg/main/default/objects/Log__c/fields/Method__c.field-meta.xml
<CustomField>
	<fullName>Method__c</fullName>
	<label>Method</label>
	<length>100</length>
	<type>Text</type>
</CustomField>