pkg/main/default/objects/Log__c/fields/Severity__c.field-meta.xml
<CustomField>
	<fullName>Severity__c</fullName>
	<label>Severity</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>DEBUG</fullName>
			</value>
			<value>
				<fullName>INFO</fullName>
			</value>
			<value>
				<fullName>WARN</fullName>
			</value>
			<value>
				<fullName>ERROR</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>