pkg/main/default/objects/Log__c/fields/SourceId__c.field-meta.xml
<CustomField>
	<externalId>true</externalId>
	<fullName>SourceId__c</fullName>
	<label>Salesforce source ID</label>
	<length>18</length>
	<type>Text</type>
</CustomField>