pkg/main/default/objects/Log__c/fields/TransactionId__c.field-meta.xml
<CustomField>
	<externalId>true</externalId>
	<fullName>TransactionId__c</fullName>
	<label>Transaction ID</label>
	<length>36</length>
	<type>Text</type>
</CustomField>