pkg/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<externalId>true</externalId>
	<label>Type</label>
	<length>100</length>
	<type>Text</type>
</CustomField>