pkg/main/default/objects/Log__c/fields/Version__c.field-meta.xml
<CustomField>
	<fullName>Version__c</fullName>
	<externalId>true</externalId>
	<label>Class</label>
	<length>20</length>
	<type>Text</type>
</CustomField>