pkg/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
	<columns>CREATED_DATE</columns>
	<columns>CREATEDBY_USER</columns>
	<columns>Severity__c</columns>
	<columns>Message__c</columns>
	<fullName>All</fullName>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>